Fix overflow-style only for animation

--- a/public/resources/styles/index.css
+++ b/public/resources/styles/index.css
@@ -24,7 +24,6 @@ body {
 
 .cart {
   width: 100%;
-  overflow-x: hidden;
 }
 .cart__content {
   margin-inline-start: auto;
